--- a/.github/workflows/WU_Assumptions.yml
+++ b/.github/workflows/WU_Assumptions.yml
@@ -21,7 +21,7 @@ jobs:
       run: Rscript -e 'install.packages("digest", repos="http://cran.us.r-project.org")'
 
     - name: Install packages
-      run: Rscript -e 'install.packages(c("tidyverse", "knitr", "readxl", "janitor", "stringr", "flextable", "officer", "zoo"))' 
+      run: Rscript -e 'install.packages(c("tidyverse", "knitr", "readxl", "janitor", "stringr", "flextable", "officer", "zoo", "quarto"))' 
     
     - name: run-script
       run: Rscript Create_WU_Assumptions.R       
