--- a/.github/workflows/WU_Assumptions.yml
+++ b/.github/workflows/WU_Assumptions.yml
@@ -13,7 +13,11 @@ jobs:
     - uses: r-lib/actions/setup-r@v2
       with: 
         use-public-rspm: true
-    
+     - name: Set up Quarto
+       uses: quarto-dev/quarto-actions/setup@v2
+       env:
+         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
 
     - uses: r-lib/actions/setup-pandoc@v2
 
